# Upper_PC

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
comm/: CMakeLists.txt  SerialBridge.cpp  SerialBridge.h
core/: CMakeLists.txt  EventBus.cpp  EventBus.h  config.cpp  config.h  events.h  logger.cpp  logger.h  recorder.cpp  recorder.h
core/fsm/: ExperimentFsm.cpp  ExperimentFsm.h  FsmBridge.cpp  FsmBridge.h
devices/: CMakeLists.txt
devices/MFF102_FilterFlipper/: MFF102_Bridge.cpp  MFF102_Bridge.h  MFF102_Driver.cpp  MFF102_Driver.h
hal/: CMakeLists.txt  ICamera.h  IDevice.h  IPotentiostat.h  IScanner.h
sim/: CMakeLists.txt  ScannerSim.cpp  ScannerSim.h
